[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Maps/DemoMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Music/Path to Lake Land.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/towerPlace.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Towers/suit_clubs.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/grey_button12.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=6]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/Icons/right.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Icons/pause.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Icons/fastForward.png" type="Texture" id=10]
[ext_resource path="res://Resources/UITheme.tres" type="Theme" id=11]
[ext_resource path="res://Assets/UI/Icons/tokens_shadow.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Icons/suit_hearts.png" type="Texture" id=13]
[ext_resource path="res://Scenes/UIScenes/Menu.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Fonts/Nunito-Light.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/Sounds/UISelect.ogg" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 15 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 6 )

[node name="DemoMap" parent="." instance=ExtResource( 1 )]

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Stats" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -328.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 84.0

[node name="LivesIcon" type="TextureRect" parent="UI/HUD/Stats"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 13 )

[node name="Lives" type="Label" parent="UI/HUD/Stats"]
margin_left = 68.0
margin_top = 4.0
margin_right = 116.0
margin_bottom = 60.0
theme = ExtResource( 11 )
text = "99"

[node name="Control" type="Control" parent="UI/HUD/Stats"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 64.0
rect_min_size = Vector2( 20, 0 )

[node name="MoneyIcon" type="TextureRect" parent="UI/HUD/Stats"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_left = 144.0
margin_right = 208.0
margin_bottom = 64.0
texture = ExtResource( 12 )

[node name="Money" type="Label" parent="UI/HUD/Stats"]
margin_left = 212.0
margin_top = 4.0
margin_right = 308.0
margin_bottom = 60.0
theme = ExtResource( 11 )
text = "9999"
align = 1
valign = 1

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -118.0
margin_right = 150.0
margin_bottom = -20.0
custom_constants/separation = 30
alignment = 1

[node name="ClubsTower" type="VBoxContainer" parent="UI/HUD/BuildBar"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 107.0

[node name="Cost" type="HBoxContainer" parent="UI/HUD/BuildBar/ClubsTower"]
margin_right = 80.0
margin_bottom = 23.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/ClubsTower/Cost"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_left = 11.0
margin_right = 34.0
margin_bottom = 23.0
rect_min_size = Vector2( 23, 23 )
texture = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="UI/HUD/BuildBar/ClubsTower/Cost"]
margin_left = 38.0
margin_right = 68.0
margin_bottom = 23.0
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 1 )
text = "999"
align = 1
valign = 1

[node name="TowerButton" type="TextureButton" parent="UI/HUD/BuildBar/ClubsTower"]
margin_top = 27.0
margin_right = 80.0
margin_bottom = 107.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/ClubsTower/TowerButton"]
modulate = Color( 0.133333, 0.133333, 0.133333, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 4 )
expand = true

[node name="Controls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -20.0

[node name="PlayPause" type="TextureButton" parent="UI/HUD/Controls"]
pause_mode = 2
modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true

[node name="FastForward" type="TextureButton" parent="UI/HUD/Controls"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
expand = true

[node name="WaveBar" type="HBoxContainer" parent="UI/HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -76.0
margin_right = 305.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="UI/HUD/WaveBar"]
margin_right = 209.0
margin_bottom = 56.0
theme = ExtResource( 11 )
text = "Next Wave:"

[node name="Sec2NextWave" type="Label" parent="UI/HUD/WaveBar"]
margin_left = 213.0
margin_right = 285.0
margin_bottom = 56.0
theme = ExtResource( 11 )
text = "100"

[node name="Menu" parent="UI" instance=ExtResource( 14 )]
pause_mode = 2
visible = false

[node name="SoundButtonClick" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 16 )
bus = "Sound"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -12.0
autoplay = true
bus = "Music"

[node name="SFX" type="Node" parent="."]

[node name="SoundPlaceTower" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )
bus = "Sound"

[connection signal="pressed" from="UI/HUD/Controls/PlayPause" to="UI" method="_on_PlayPause_pressed"]
[connection signal="pressed" from="UI/HUD/Controls/FastForward" to="UI" method="_on_FastForward_pressed"]
